my biography works

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BIOGRAPHY</title>
+    <title style="color: black;">BIOGRAPHY</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,6 +18,25 @@
     </h2>
     
 </body>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<button>call</button>
+<br>
+<br>
+<br>
+
+<br>
+<br>
+<br>
+
 <footer>
     Hit me up on 
     <nav>
